syntax = "proto3";

package pb;

option go_package = "./pb";

message ConnData {
    string ConId = 1;
    bytes ConData = 2;
}
message ConnResp {
    bool Ok = 1;
}

service Conn {
    // 其他服务调用发送消息
    rpc Send (ConnData) returns (ConnResp);
}